# pawn-natives

./: CMakeLists.txt  NativeCast.hpp  NativeFunc.hpp  NativeFuncGen.hpp  NativeFuncImpl.hpp  NativeHook.hpp  NativeHookImpl.hpp  NativeImport.hpp  NativesMain.hpp  README.md  plugin-natives.sln  plugin-natives.vcxproj  test.cpp
Internal/: NativeCast.hpp  NativeFuncImpl.hpp  NativeHookImpl.hpp
pawn-natives/: NativeFunc.hpp
pawn-natives/Internal/: NativeCast.hpp  NativeFuncImpl.hpp
